# voice-to-text

./: .gitignore  README.md  voicetyping-spec.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  commands.rs  config.rs  controller.rs  history.rs  hotkey.rs  main.rs  notify.rs  overlay.rs  sound.rs  state.rs  transcribe.rs  tray.rs  typer.rs
ui/history/: history.css  history.js  index.html
ui/overlay/: index.html  overlay.css  overlay.js
ui/settings/: index.html  settings.css  settings.js
